fixed overflow bug on record mobile, i think

--- a/perma_web/static/css/style-responsive-archive.scss
+++ b/perma_web/static/css/style-responsive-archive.scss
@@ -24,8 +24,7 @@ $color-yellow: #d0a60f;
 }
 
 body, html {
-	height: 100%;
-	overflow-y: scroll;
+	overflow: auto;
 }
 
 // iframe start
